--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         
         <h1>Embracing Minimalism</h1>
         <p class="content">From minimalist sculptures to minimalist paintings, this blog will inspire you to appreciate the beauty that lies in simplicity.</p>
-        <p>Annie Spratt</p>
+        <p class="author">Annie Spratt</p>
         
     </div>
 </body>
