--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="cardimage">
             <img src="cactus.jfif" alt="cactus">
         </div>
-        <span class="tag">Design</span>
+        <span class="tag"><b>Design</b></span>
         
         <h1>Embracing Minimalism</h1>
         <p class="content">From minimalist sculptures to minimalist paintings, this blog will inspire you to appreciate the beauty that lies in simplicity.</p>
